<resources>
    <string name="app_name">Ioasys Teste</string>
    <string name="logo">Logo</string>
    <string name="login_welcome">BEM-VINDO AO\nEMPRESAS</string>
    <string name="login_text">Lorem ipsum dolor sit amet, contetur\nadipiscing elit. Nunc accumsan.</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="login_failure">Usuário ou senha incorretos!</string>
    <string name="logo_toolbar">logo_toolbar</string>
    <string name="search">Pesquisar</string>
    <string name="enterprise_logo">Logo Empresa</string>
</resources>
